--- a/admin/index.html
+++ b/admin/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="daisy.css">
     <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -55,7 +56,7 @@
         </div>
     </header>
 
-    <main class="flex flex-1 w-3/4 m-auto flex-col">
+    <main class="flex flex-1 w-75 m-auto flex-col">
         <h1 class="text-3xl mt-2" id="stocksHeader">Stocks</h1>
         <hr class="mb-2" />
         <p class="text-xl">Stocks Are <span id="stockBox" class="btn btn-success text-xl ml-2">...</span></p>
