Update Admin Controls

--- a/admin/index.html
+++ b/admin/index.html
@@ -144,9 +144,65 @@
                 </div>
                 <div class="collapse-content">
                     <label class="input input-bordered flex items-center gap-2 bg-base-100 text-success">
-                        Brian
+                        Katagiri
                         <input type="number" class="grow" placeholder="..." class="text-info-content"
-                            id="stock11Input" />
+                            id="stock11input" />
+                    </label>
+                </div>
+                <div class="collapse-content">
+                    <label class="input input-bordered flex items-center gap-2 bg-base-100 text-success">
+                        Miwa
+                        <input type="number" class="grow" placeholder="..." class="text-info-content"
+                            id="stock12Input" />
+                    </label>
+                </div>
+                <div class="collapse-content">
+                    <label class="input input-bordered flex items-center gap-2 bg-base-100 text-success">
+                        Kako
+                        <input type="number" class="grow" placeholder="..." class="text-info-content"
+                            id="stock13Input" />
+                    </label>
+                </div>
+                <div class="collapse-content">
+                    <label class="input input-bordered flex items-center gap-2 bg-base-100 text-success">
+                        Arashiyama
+                        <input type="number" class="grow" placeholder="..." class="text-info-content"
+                            id="stock14Input" />
+                    </label>
+                </div>
+                <div class="collapse-content">
+                    <label class="input input-bordered flex items-center gap-2 bg-base-100 text-success">
+                        Kusakabe
+                        <input type="number" class="grow" placeholder="..." class="text-info-content"
+                            id="stock15Input" />
+                    </label>
+                </div>
+                <div class="collapse-content">
+                    <label class="input input-bordered flex items-center gap-2 bg-base-100 text-success">
+                        Kazama
+                        <input type="number" class="grow" placeholder="..." class="text-info-content"
+                            id="stock16Input" />
+                    </label>
+                </div>
+                <div class="collapse-content">
+                    <label class="input input-bordered flex items-center gap-2 bg-base-100 text-success">
+                        Fuyushima
+                        <input type="number" class="grow" placeholder="..." class="text-info-content"
+                            id="stock17Input" />
+                    </label>
+                </div>
+                <div class="collapse-content">
+                    <label class="input input-bordered flex items-center gap-2 bg-base-100 text-success">
+                        Tamakoma-1
+                        <input type="number" class="grow" placeholder="..." class="text-info-content"
+                            id="stock18Input" />
+                    </label>
+                </div>
+                <div class="collapse-content">
+                    <label class="input input-bordered flex items-center gap-2 bg-base-100 text-success">
+                        Tachikawa
+                        <input type="number" class="grow" placeholder="..." class="text-info-content"
+                            id="stock19Input" />
                     </label>
                 </div>
                 <button class="btn btn-success m-auto mb-2" id="stockSubmitButton">Submit</button>
