Significant Styling, TODO: Menu Bar smaller screens

--- a/admin/index.html
+++ b/admin/index.html
@@ -41,12 +41,12 @@
             <div class="flex-1">
                 <a class="btn btn-ghost text-xl" href="/admin/">Admin BBF</a>
             </div>
-            <div class="flex-none navLinks hidden md:flex">
+            <div class="flex-none navLinks hidden flex">
                 <ul class="menu menu-horizontal px-1">
-                    <li><a href="/canon" id="canonNav">Canon</a></li>
+                    <li><a href="/canon"     id="canonNav">Canon</a></li>
                     <li><a href="/investing" id="investingNav">Investing</a></li>
-                    <li><a href="/ocmaker" id="ocMakerNav">OC Maker v1</a></li>
-                    <li><a href="/ocmaker2" id="ocMaker2Nav">OC Maker v2</a></li>
+                    <li><a href="/ocmaker"   id="ocMakerNav">OC Maker v1</a></li>
+                    <li><a href="/ocmaker2"  id="ocMaker2Nav">OC Maker v2</a></li>
                 </ul>
             </div>
         </div>
