--- a/admin/index.html
+++ b/admin/index.html
@@ -73,7 +73,7 @@
 
             <label class="input input-bordered flex items-center gap bg-base-100 text-success">
                 Katagiri
-                <input type="number" class="grow" placeholder="..." class="text-info-content" id="stock11input" />
+                <input type="number" class="grow" placeholder="..." class="text-info-content" id="stock11Input" />
             </label>
 
             <label class="input input-bordered flex items-center gap bg-base-100 text-success">
